quic/s2n-quic-transport/src/path/manager/snapshots/quic__s2n-quic-transport__src__path__manager__tests__events__silently_return_when_there_is_no_valid_path.snap
---
source: quic/s2n-quic-transport/src/path/manager/tests.rs
assertion_line: 477
expression: ""

---
PathChallengeUpdated { path_challenge_status: Abandoned, path: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 0.0.0.0:0, remote_cid: 0x01, id: 0, is_active: true }, challenge_data: [0, 0, 0, 0, 0, 0, 0, 0] }
