quic/s2n-quic-transport/src/path/manager/snapshots/quic__s2n-quic-transport__src__path__manager__tests__events__stop_using_a_retired_connection_id.snap
---
source: quic/s2n-quic-transport/src/path/manager/tests.rs
expression: ""

---
ConnectionIdUpdated { path_id: 0, cid_consumer: Local, previous: 0x69643031, current: 0x69643032 }
